--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,4 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +9,40 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App > * {
+  max-width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  display: flex;
+}
+
+.content > div {
+  padding: 10px;
+}
+
+.content > div input {
+  width: 200px;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.content .error {
+  color: red;
+  font-size: 14px;
+}
+
+.content .buttons > button {
+  display: block;
+  padding: 10px;
+  border: 0;
+  border-radius: 10px;
+  background-color: #eee;
+  width: 100%;
+  cursor: pointer;
+}
+
+.content .buttons > button:first-child {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
